--- a/index.html
+++ b/index.html
@@ -981,28 +981,28 @@ of each drug container to estimate the degradation of the drug.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Shivam" data-position="top" data-tooltip="Call Shivam"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
               aria-label="Call Varad">+919318319974</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
+          <a aria-label="Email Shivam" href="mailto:s.tyagi050@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Shivam" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:s.tyagi050@gmail.com"
               class="hoverline">s.tyagi050@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Shivam on GitHub" href="http://github.com/TyagiXShivam" target="_blank"
+            data-position="top" data-tooltip="View Shivam on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
+              aria-label="Shivam on Github" href="http://github.com/TyagiXShivam" class="hoverline"
               target="_blank">github.com/TyagiXShivam</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Shivam on LinkedIn" href="http://linkedin.com/in/shivamXty" target="_blank"
+            data-position="top" data-tooltip="View Shivam on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
+              class="fa fa-linkedin"></i><a aria-label="Shivam on LinkedIn" href="http://linkedin.com/in/shivamXty"
               class="hoverline" target="_blank">linkedin.com/in/shivamXty</a></a>
         </p>
       </div>
