--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:title" content="Shivam Tyagi | Software Developer" />
   <meta property="og:description" content="Software Developer" />
-  <meta property="og:url" content="https://varadbhogayata.github.io/" />
+  <meta property="og:url" content="https://TyagiXShivam.github.io/" />
   <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
   <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
   <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
@@ -91,19 +91,19 @@
 
       <li class="bold">
         <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-person small"></i><span>About</span></a>
+            class="mdi-social-person small"></i><span><b>About</b></span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
           class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-trending-up small"></i><span>Experience</span></a>
+            class="mdi-action-trending-up small"></i><span><b>Experience</b></span></a>
       </li>
 
       <li class="bold">
         <!-- mdi-av-web small
              mdi-av-my-library-books small-->
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
+            class="mdi-av-my-library-books small"></i><span><b>Projects</b></span></a>
       </li>
 
       <li class="bold">
@@ -114,7 +114,7 @@
         mdi-av-equalizer
         -->
         <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-assessment small"></i><span>Skills</span></a>
+            class="mdi-action-assessment small"></i><span><b>Skills</b></span></a>
       </li>
       
       <li class="bold">
@@ -122,7 +122,7 @@
         ICONS:
         -->
         <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-school small"></i><span>Education</span></a>
+            class="mdi-social-school small"></i><span><b>Education</b></span></a>
       </li>
 
       <li class="bold">
@@ -132,7 +132,7 @@
         3. mdi-communication-email
         -->
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
-            class="mdi-content-mail small"></i><span>Contact</span></a>
+            class="mdi-content-mail small"></i><span><b>Contact</b></span></a>
       </li>
 
       <li class="bold">
@@ -148,7 +148,7 @@
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
         <a aria-label="Open Shivam's resume in a new tab" href="/assets/resume/Shivam_resume.pdf" target="_blank"
-        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
+        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span><b>Resume</b></span></a>  
       </li>
     </ul>
   </nav>
@@ -209,7 +209,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Shivam Tyagi.</span></h2>
+              <h2><b>Hi, I'm </b><span class="teal"><b>Shivam Tyagi.</b></span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
@@ -226,19 +226,7 @@
                 </button>
               </a>
 
-              <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
-                <button class="icon-btn angellist">
-                  <i class="fa fa-angellist"></i>
-                </button>
-              </a> -->
-
-              <!-- <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-
-                  </span>
-              </a> -->
+              
             </div>
             <div class='buttons'>
               <a href="#about" class="readme">Read More</a>
