--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
               <li>Optimized server response time through multithreading
                 and concurrency management , reducing response time by
                 20% .</li>
-              <b>Tools:</b> Spring Boot, Java, JPA/Hibernate, Spring Security, Spring AI, Microservices, Kafka, AWS.
+              <b>Tech Stack:</b> Spring Boot, Java, JPA/Hibernate, Spring Security, Spring AI, Microservices, Kafka, AWS.
             </ul>
           </div>
           <div class="card-action">
@@ -382,7 +382,7 @@
                 quality testing and final implementation.
               </li>
               <li>
-                <b>Tools:</b> Spring Boot, Java, JPA/Hibernate, MySQL, ReactJS, Github, Jira, Postman..
+                <b>Tech Stack:</b> Spring Boot, Java, JPA/Hibernate, MySQL, ReactJS, Github, Jira, Postman..
               </li>
             </ul>
           </div>
@@ -415,7 +415,7 @@
                 Created an alert system to send notifications and emails when the parameters exceed the threshold.
               </li>
               <li>
-                <b>Tools:</b> Java, C, Debugging
+                <b>Tech Stack:</b> Java, C, Debugging
               </li>
             </ul>
           </div>
@@ -448,7 +448,7 @@
                 and Entity-Relationship diagrams.
               </li>
               <li>
-                <b>Tools:</b> MySql, Hibernate, Java
+                <b>Tech Stack:</b> MySql, Hibernate, Java
               </li>
             </ul>
           </div>
